# Basic-Raytracing

./: CMakeLists.txt  README.md
code/: AABB.h  Bvh.h  Camera.h  Image.h  LightSource.h  Material.h  Mesh.h  Ray.cpp  Ray.h  RayTracer.h  Scene.h  Vec3.h  WorleyNoise.h  main.cpp
